<resources>
    <string name="app_name">M_Hike</string>
    <string name="title_main">M-Hike</string>
    <string name="add_hike">Add Hike</string>
    <string name="add_hike_sub">Create and save new hikes</string>
    <string name="view_hikes">View Hikes</string>
    <string name="view_hikes_sub">Browse your saved hikes</string>
    <string name="search">Search</string>
    <string name="search_sub">Quickly find hikes</string>
    <string name="export_db">Export DB</string>
    <string name="export_db_sub">Export database for inspection</string>
    <string name="export_database">Export Database</string>
    <string name="export_database_sub">Export database for inspection</string>
    <string name="edit">Edit</string>
    <string name="parking_available">Parking Available</string>
    <string name="title_add_hike">Add Hike</string>
    <string name="title_list_hikes">Hikes</string>
    <string name="title_search">Search Hikes</string>
    <string name="hint_name">Hike name</string>
    <string name="hint_location">Location</string>
    <string name="hint_date">Date (YYYY-MM-DD)</string>
    <string name="hint_length">Length (km)</string>
    <string name="hint_description">Description</string>
    <string name="save_hike">Save Hike</string>
    <string name="add_observation">Add Observation</string>
    <string name="btn_view_hikes">View Hikes</string>
    <string name="btn_add_hike">Add Hike</string>
    <string name="btn_search_hikes">Search Hikes</string>
    <string name="confirm_delete">Are you sure you want to delete this hike?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update_hike">Update Hike</string>
    <string name="title_edit_hike">Edit Hike</string>
</resources>